# preroll

./: .env  .gitignore  Cargo.toml  Changelog.md  README.md  README.tpl
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml
preroll-example/: Cargo.toml  README.md
preroll-example/src/: lib.rs  main.rs
preroll-example/tests/: integration.rs  networked.rs  test_utils.rs
preroll-main-test/: Cargo.toml
preroll-main-test/src/: lib.rs  main.rs
preroll-main-test/tests/: test-networked.rs  test-preroll-main.rs  test-test_utils.rs  test_utils.rs
src/: lib.rs  prelude.rs  routes_variadic.rs  setup.rs  utils.rs
src/builtins/: monitor.rs
src/logging/: json.rs  mod.rs  pretty.rs
src/middleware/: clacks.rs  json_error.rs  logger.rs  mod.rs  postgres.rs  requestid.rs  trace.rs
src/middleware/extension_types/: correlation_id.rs  mod.rs  request_id.rs
src/middleware/honeycomb/: errors.rs  mod.rs  propagation.rs
src/test_utils/: mod.rs  routes_variadic.rs
