[package]
name = "preroll-main-test"
version = "0.0.0"
authors = ["Jeremiah Senkpiel <fishrock123@rocketmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = ["preroll/test"]

[dependencies]
futures-lite = "1.11.2"
preroll = { path = "../", features = ["panic-on-error"] }

[dependencies.tide]
version = "0.15.0"
default-features = false
features = ["h1-server"]

[dev-dependencies]
assert_cmd = "1.0.2"
portpicker = "0.1.0"
surf = "2.1"

[dev-dependencies.async-std]
version = "1.8.0"
features = ["attributes", "unstable"]
