[package]
name = "preroll-main-test"
version = "0.1.1"
authors = ["Jeremiah Senkpiel <fishrock123@rocketmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["test"]
test = ["preroll/test", "preroll/custom_middleware"]

[dependencies]
futures-lite = "1.11.2"
preroll = { path = "../", features = ["test"] }
serde_json = "1.0.58"

[dependencies.serde]
version = "1.0.116"
features = ["derive"]

[dependencies.tide]
version = "0.15.0"
default-features = false
features = ["h1-server"]

[dev-dependencies]
assert_cmd = "1.0.2"
portpicker = "0.1.0"
surf = "2.1"

[dev-dependencies.async-std]
version = "1.8.0"
features = ["attributes", "unstable"]
